<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_players" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_vehicles" />
        <item
            android:id="@+id/nav_gangs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gangs" />
        <item
            android:id="@+id/nav_houses"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_houses" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_get_support"
                android:visible="false" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
