<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.uk.cyberbyte.armaworks.Fragments.PlayerFragment">

    <TextView
        android:id="@+id/textView7"
        android:text="Player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/player_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_cash" />

    <EditText
        android:id="@+id/player_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_bank" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_side_cop" />

    <Button
        android:id="@+id/player_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            &lt;!&ndash; android:layout_weight="1"&ndash;&gt;

            <AutoCompleteTextView
                android:id="@+id/player_civ_lvl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_side_civ"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/player_medic_lvl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_side_medic"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/player_cop_lvl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_side_cop"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>-->

</FrameLayout>
